# blob-rpc-server

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/fetch/: OpenCV.cmake
sdk/: CMakeLists.txt  blob_sdk.cpp  main.cpp  makefile
sdk/example/: main.cpp  makefile
sdk/include/: blob_sdk.h
sdk/myclass/: Makefile
sdk/myclass/include/: myclass.h
sdk/myclass/src/: myclass.cpp
server/: CMakeLists.txt  client.cc  grpc_server.cpp  grpc_server.h  makefile  mathtest.proto  server.cc
server/cmake/: common.cmake
server/common/: plog.h
server/proto/: algointerface.proto
